fixed styling issues on firefox, internet explorer and microsoft-edge

--- a/resources/assets/css/style-dark.css
+++ b/resources/assets/css/style-dark.css
@@ -16187,7 +16187,7 @@ table.dataTable thead .sorting:after {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .dropzone .dz-preview .dz-remove {
   position: absolute;
@@ -16220,4 +16220,19 @@ table.dataTable thead .sorting:after {
 }
 body.dt-rowReorder-noOverflow {
   overflow-x: hidden;
+}
+@media (min-width: 768px) {
+  .content-wrapper .sidebar .nav-second-level {
+    padding-bottom: 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .table-responsive {
+    overflow-x: hidden;
+  }
+}
+@media only screen {
+  .switch-light > span {
+    min-height: 0 !important;
+  }
 }
